--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@heroui/pagination": "^2.2.14",
     "@heroui/react": "^2.7.4",
     "framer-motion": "^12.4.7",
     "lucide": "^0.477.0",
