--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.9",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.9"
+    "sass": "^1.86.0",
+    "tailwindcss": "^4.0.14"
   }
 }
