--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@heroicons/react": "^2.2.0",
     "@heroui/pagination": "^2.2.14",
-    "@heroui/react": "^2.7.4",
+    "@heroui/react": "^2.7.5",
+    "@heroui/theme": "^2.4.12",
+    "aos": "^3.0.0-beta.6",
     "framer-motion": "^12.4.7",
     "lucide": "^0.477.0",
     "next": "15.2.0",
