--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,21 @@
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@heroicons/react": "^2.2.0",
     "@heroui/pagination": "^2.2.14",
-    "@heroui/react": "^2.7.5",
+    "@heroui/react": "^2.7.6-beta.2",
     "@heroui/theme": "^2.4.12",
+    "antd": "^5.24.5",
     "aos": "^3.0.0-beta.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "lucide": "^0.477.0",
+    "lucide-react": "^0.485.0",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-type-animation": "^3.2.0",
+    "tailwind-merge": "^3.0.2",
+    "tw-animate-css": "^1.2.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
